# ParakhAI_test

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  codeql.yml  scheduled.yml
docs/: a11y_findings.md  app_bugs.md  visual_diffs.md
locators/: __init__.py  add_model_flow_locators.py  ai_maker_locators.py  auditor_model_detail_locators.py  dashboard_locators.py  evaluation_detail_locators.py  evaluations_locators.py  evaluator_role_locators.py  evaluators_locators.py  home_locators.py  login_locators.py  models_locators.py  org_selection_locators.py  prompt_libraries_locators.py  workspace_locators.py
pages/: add_model_flow_page.py  ai_maker_page.py  auditor_model_detail_page.py  base_page.py  dashboard_page.py  evaluation_detail_page.py  evaluations_page.py  evaluator_role_page.py  evaluators_page.py  home_page.py  login_page.py  models_page.py  new_evaluation_page.py  org_selection_page.py  prompt_libraries_page.py  workspace_page.py
scripts/: _api_client.py  cleanup_all.py  cleanup_drafts.py  generate_pdf_report.py  merge_test_reports.py  sandbox_reset.py  seed_test_data.py
tests/: conftest.py
tests/accessibility/: test_accessibility.py  test_accessibility_auth.py
tests/api/: test_api.py  test_db_health.py  test_graphql.py  test_graphql_authenticated.py  test_security.py
tests/data/: __init__.py  test_data.py
tests/e2e/: test_add_model_flow.py  test_auth.py  (+30 more)
utils/: config.py  helpers.py  report_generator.py  reporters.py  test_data_factory.py
(+5 files in other folders)
