[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "parakh-test-framework"
version = "1.0.0"
description = "Production-ready Playwright test automation framework for the Parakh AI evaluation platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["testing", "playwright", "automation", "parakh", "civicdataspace"]
authors = [
    { name = "QA Team", email = "qa@civicdataspace.in" }
]

dependencies = [
    "playwright>=1.44.0",
    "pytest>=8.2.0",
    "pytest-playwright>=0.5.0",
    "pytest-asyncio>=0.23.0",
    "pytest-html>=4.1.1",
    "pytest-xdist>=3.5.0",
    "pytest-rerunfailures>=14.0",
    "pytest-timeout>=2.3.1",
    "pytest-json-report>=1.5.0",
    "requests>=2.32.0",
    "python-dotenv>=1.0.1",
    "Pillow>=10.3.0",
    "axe-playwright-python>=0.1.3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "allure-pytest>=2.13.5",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in default arguments
    "B904",   # raise from within except
]

[tool.pytest.ini_options]
# Kept in pytest.ini for broader compatibility; this section is a fallback
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["locators*", "pages*", "utils*", "tests*"]
